--- a/package.json
+++ b/package.json
@@ -18,10 +18,20 @@
     "@angular/core": "~8.2.13",
     "@angular/forms": "~8.2.13",
     "@angular/material": "^8.2.3",
+    "@angular/material-moment-adapter": "^8.2.3",
     "@angular/platform-browser": "~8.2.13",
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
+    "@fortawesome/angular-fontawesome": "^0.5.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@types/jquery": "^3.3.31",
+    "angular-font-awesome": "^3.1.2",
+    "bootstrap": "^4.3.1",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.4.1",
+    "moment": "^2.24.0",
+    "popper.js": "^1.16.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
